trying mobile wrap fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@
     grid-template-columns: repeat(var(--columns), 1fr);
     grid-template-rows: 1;
     width: fit-content;
+    flex-basis: 100%;
 }
 
 #game-player-info {
